# cpp-assignments

./: .gitignore  README.md  about_fltk_dependencies.txt
Assignment_1/: .gitignore  CHANGES.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  chg_2022_02_26.txt  chg_2022_02_27.txt  chg_2022_02_28.txt  chg_2022_03_01.txt  day_phase.cpp  game_flow.cpp  info_menu.cpp  initialization.cpp  main.cpp  night_phase.cpp  old_get_functions.cpp  test.cpp  test2.cpp  town_of_salem.cpp  town_of_salem.h  voting_day_phase.cpp  voting_system.cpp
Assignment_1/old_files/: chg_2022_02_26.txt  game_flow.cpp  info_menu.cpp  is_int.cpp  test_cin.cpp
Assignment_2/: .gitignore  Assignment_2.cpp  CMakeLists.txt  Player.cpp  Player.h  Players.txt  Round.cpp
Assignment_2/Assignment2_Koutrakis/: Assignment_2.cpp  Round.h
Assignment_2/Diafora/: README.md  TODO.txt  menu.cpp  setters_getters.md
Assignment_2/Diafora/files_cmake/: CMakeLists.txt  ReadFile_Config.h  files_tests.cpp  new_file.txt
Assignment_3/: .gitignore  CMakeLists.txt
Assignment_3/Assignment_3/: Assignment__3.cpp  CMakeLists.txt  Game_window.cpp  Game_window.h  Players.txt
Assignment_3/Assignment_3/Assignment_2/: CMakeLists.txt  Player.cpp  Round.cpp  Round.h
Assignment_3/Assignment_3_Koutrakis/: README.txt
Assignment_3/Assignment_3_Koutrakis/Assignment_3/: Assignment__3.cpp  Game_window.cpp  Game_window.h
Assignment_3/Assignment_3_Koutrakis/Assignment_3/Assignment_2/: Player.cpp  Player.h
Assignment_3/Assignment_3_Koutrakis/fltk-1.3.5/: CMakeLists.txt
Assignment_3/Assignment_3_Koutrakis/fltk-1.3.5/buid/: FLTKConfig.cmake  UseFLTK.cmake  cmake_uninstall.cmake
Assignment_3/_helloWorld_fltk_gui_chapter12/: CMakeLists.txt
Assignment_3/_helloWorld_fltk_gui_chapter12/.cache/clangd/index/: Enumerations.H.815B289AEF41119D.idx  ExternalCodeEditor_UNIX.h.6A44885EFB33A7E7.idx  Fl.H.5513A309DEB0656D.idx  Fl_Bitmap.H.DC5E4B0BE7032891.idx  Fl_Box.H.9C59C8F365FF244A.idx  Fl_Button.H.AB0BE1C1CA2918E4.idx  Fl_Check_Button.H.E55D80C2FD71439B.idx  Fl_Choice.H.4F2A926AE8AE025E.idx  Fl_Device.H.A326940B98F7FC3F.idx  Fl_Double_Window.H.965C42B9DACC86E0.idx  Fl_Export.H.9DAAC2EE3EAA9027.idx  Fl_File_Input.H.317DAB149BDA238F.idx  Fl_File_Input.cxx.E2B5EFBB90DC65B0.idx  Fl_Font.H.6C6EA10F960FE970.idx  Fl_Group.H.70E46EAF174517F8.idx  Fl_Image.H.BB62D78EF490707B.idx  Fl_Input.H.E62DBD3B3F199495.idx  Fl_Input_.H.54EE3A0040B0C711.idx  Fl_Input_.cxx.A2E17AAC6409D69C.idx  Fl_Input_Choice.H.984F7D93B8A612E8.idx  Fl_Int_Input.H.92DCB19FA794F915.idx  Fl_Light_Button.H.0E18AF55234CEBE9.idx  Fl_Menu.H.390AF18739D1AF30.idx  Fl_Menu_.H.ED15799C640077C2.idx  Fl_Menu_.cxx.0F399D506BF53CD1.idx  Fl_Menu_Bar.H.2E092C4063E1D174.idx  Fl_Menu_Button.H.79ED84355147EEA7.idx  Fl_Menu_Item.H.FF574CE0B82490A8.idx  Fl_Menu_Type.cxx.FC2D3A4519B1E39C.idx  Fl_Output.H.C0315E29C5874F33.idx  Fl_Pack.H.B590D05657B40DC6.idx  Fl_Pixmap.H.A3928C2D437412D0.idx  Fl_Plugin.H.90FA50A96A4E3BFA.idx  Fl_Preferences.H.CCB4B1296859731C.idx  Fl_RGB_Image.H.CBD44DCAF1B331F6.idx  Fl_Radio_Button.H.844B267EA7805D68.idx  Fl_Repeat_Button.H.FFF7E66494189B53.idx  Fl_Return_Button.H.60C5300A2ADD7881.idx  Fl_Round_Button.H.5A511CD316D7561B.idx  Fl_Scroll.H.3C8459287E1DE8FB.idx  (+41 more)
Assignment_3/_helloWorld_fltk_gui_chapter12/Chapter12/: chapter.12.3.cpp
Assignment_3/_helloWorld_fltk_gui_chapter12/fltk-1.3.5/buid/: CMakeDoxygenDefaults.cmake  FLTK-Targets.cmake
Assignment_3/first_attempts/: CMakeLists.txt  Player.cpp  Players.txt  Round.cpp  image_circle.cpp  input_box.cpp  my_window.cpp  old_std_lib_facilities.h
Assignment_3/fltk-1.3.5/buid/: fltk-config
Assignment_4/: Assignment_4.cpp  CMakeLists.txt  PoliticalParty.cpp  PoliticalParty.h  std_lib_facilities.h
